Story documentation - work in progress.